# FAST_API_BLOG

./: .dockerignore  .gitignore  Dockerfile  README.md  auth.py  config.py  database.py  email_utils.py  image_utils.py  main.py  models.py  pyproject.toml  schemas.py  seed_got.py  start.sh
alembic/: env.py
alembic/versions/: ddb6aa1b143e_initial_tables.py
routers/: posts.py  users.py
static/css/: main.css
static/js/: auth.js
templates/: account.html  base.html  error.html  forgot_password.html  home.html  login.html  post.html  register.html  reset_password.html  user_posts.html
tests/: test_api.py
