[project]
name = "fastapi-blog"
version = "0.1.0"
description = "FastAPI Blog Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.16.0",
    "asyncpg>=0.31.0",
    "boto3>=1.38.0",
    "fastapi[standard]>=0.115.0",
    "greenlet>=3.1.0",
    "pillow>=11.0.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10.0",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "moto[s3]>=5.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "httpx>=0.28.0",
    "moto[s3]>=5.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
